# yf_watcher

./: README.md  main.py  pyproject.toml  results.db  run.sh
app/: api.py  db.py  indicators.py  main.py  services.py
