[project]
name = "yf-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "google-generativeai>=0.8.6",
    "pandas>=2.3.3",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]
